# pigeon-mobile

./: .dockerignore  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
core/: Cargo.toml
core/src/: api.rs  e2ee.rs  keys.rs  lib.rs  media.rs  rooms.rs  session.rs  store.rs  sync.rs
core/tests/: http_mock.rs  session_persist.rs
docker/: Dockerfile  Dockerfile.sandbox  sandbox-entrypoint.sh
docs/: ARCHITECTURE.md  CODEBASE_GUIDE.md
e2e/: Cargo.toml
e2e/tests/: oneshot.rs
ios/: .gitignore  README.md  build-core.sh  run-app.sh  run-hellocore.sh  run-tests.sh
ios/HelloCore/: ContentView.swift  HelloCoreApp.swift
ios/HelloCore.xcodeproj/: project.pbxproj
ios/HelloCore.xcodeproj/xcshareddata/xcschemes/: HelloCore.xcscheme
ios/Pigeon/: KeychainKeyStore.swift  OsLogSink.swift  PhotoPicker.swift  Pigeon.entitlements  PigeonApp.swift  RootView.swift  SyncController.swift
ios/Pigeon.xcodeproj/: project.pbxproj
ios/Pigeon.xcodeproj/xcshareddata/xcschemes/: Pigeon.xcscheme
ios/Pigeon/Auth/: AuthError.swift  AuthView.swift  AuthViewModel.swift
ios/Pigeon/Rooms/: ChatView.swift  ChatViewModel.swift  RoomListView.swift  RoomSyncObserver.swift  RoomsViewModel.swift
ios/PigeonCore/: Package.swift
ios/PigeonTests/: AuthErrorTests.swift  KeychainKeyStoreTests.swift
scripts/: claude-sandbox.sh
(+13 files in other folders)
